fix issue with action bar content being cropped

--- a/packages/web/src/app/styles/mat-theme.scss
+++ b/packages/web/src/app/styles/mat-theme.scss
@@ -23,14 +23,6 @@ $default-theme: mat-light-theme($default-theme-primary, $default-theme-accent, $
 // that you are using.
 @include angular-material-theme($default-theme);
 
-.mat-drawer-container {
-  background-color: inherit;
-}
-
-.mat-drawer-side.mat-drawer-end {
-  border-left-width: 0;
-}
-
 .mat-mini-fab {
   box-shadow: none;
 }
